# BINUSMAYA_Discord_Bot

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: binusmaya.rs  consts.rs  discord.rs  dropbox_api.rs  init.rs  main.rs  prelude.rs  proxy.rs  third_party.rs
src/api/: dropbox_api.rs  mod.rs  new_binusmaya_api.rs  old_binusmaya_api.rs
src/commands/: add.rs  classes.rs  details.rs  mod.rs  ongoing.rs  ping.rs  register.rs  schedule.rs  upcoming.rs
src/discord/: discord.rs  helper.rs  mod.rs
src/discord/commands/: about.rs  add.rs  announcement.rs  classes.rs  details.rs  mod.rs  ongoing.rs  ping.rs  schedule.rs  test.rs  upcoming.rs
src/discord/commands/general/: about.rs  add.rs  mod.rs  register.rs
src/discord/commands/new_binusmaya/: announcement.rs  classes.rs  details.rs  mod.rs  ongoing.rs  schedule.rs  session.rs  upcoming.rs
src/discord/commands/old_binusmaya/: assignment.rs  comserv.rs  helper.rs  mod.rs  sat.rs
src/models/: user.rs
src/repository/: mod.rs  new_binusmaya_repository.rs  old_binusmaya_repository.rs
