[package]
name = "BINUSMAYA_Discord_Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1" }
thirtyfour = {version = "0.27.2"}
serde_json = "1.0.73"
serde = "1.0.132"
serenity = "0.10"
csv-async = "1.2"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
async-recursion = "0.3"