[package]
name = "BINUSMAYA_Discord_Bot"
authors = ["Bryan Egbert"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1" }
thirtyfour = "0.28"
serde_json = "1.0.73"
serde = "1.0.132"
serenity = "0.10"
csv-async = "1.2"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"