[package]
name = "BINUSMAYA_Discord_Bot"
authors = ["Bryan Egbert"]
version = "1.1.1"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
thirtyfour = "0.28"
serde_json = "1.0.73"
serde = "1.0.132"
serenity = { version = "0.10", features = ["unstable_discord_api", "collector"] }
csv-async = "1.2"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"